# ftblink

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
src/: cfg.rs  lib.rs  main.rs  path_selector.rs
ui/: appwindow.slint
