[package]
name = "ftblink"
version = "0.1.0"
authors = ["Ricky12Awesome <29931568+Ricky12Awesome@users.noreply.github.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.4", features = ["backend-qt"] }

confy = "0.6"
symlink = "0.1"
open = "5.0"
native-dialog = "0.7"

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.4"
